--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,11 @@ frontend/dist/
 frontend/.env
 frontend/.env.local
 frontend/.env.*.local
+
+# MCP Server
+mcp-server/node_modules/
+mcp-server/build/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
