feat: implement Admin Pagination and JWT Authentication

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -58,3 +58,5 @@ gem "omniauth-google-oauth2", "~> 1.2"
 gem "omniauth-rails_csrf_protection", "~> 2.0"
 
 gem "dotenv-rails", "~> 3.2", groups: [:development, :test]
+
+gem "devise-jwt", "~> 0.12.1"
