--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -34,7 +34,7 @@ gem "image_processing", "~> 1.2"
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
 gem "rack-cors"
-gem "devise"
+gem "devise", github: "heartcombo/devise", branch: "main"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -59,4 +59,4 @@ gem "omniauth-rails_csrf_protection", "~> 2.0"
 
 gem "dotenv-rails", "~> 3.2", groups: [:development, :test]
 
-gem "devise-jwt", "~> 0.12.1"
+gem "jwt"
